<!-- 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.geoquiz.AddActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:maxHeight="@dimen/activity_vertical_margin"
        android:maxWidth="@dimen/activity_horizontal_margin"
        android:scaleType="center" />

</RelativeLayout>
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:stretchColumns="1">
   tools:context="com.example.geoquiz.AddActivity" >
   <TableRow>
       <TextView
           android:text="@string/qustionLable"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/questionEditControl"
           android:text="@string/question_default_text"
           android:padding="3dip"
           android:scrollHorizontally="true" />
   </TableRow>
   

   <TableRow>
       <TextView
           android:text="@string/answerLable"
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />

       <EditText android:id="@+id/answerEditControl"
           android:text="@string/answer_default_Text"
           android:password="true"
           android:padding="3dip"
           android:scrollHorizontally="true" />
   </TableRow>

   <TableRow>
       android:gravity="right">

       <Button android:id="@+id/save_button"
           android:text="@string/save_text" />

       <Button android:id="@+id/return_button"
           android:text="@string/return_text" />
   </TableRow>
   <TableRow>
      <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:maxHeight="@dimen/activity_vertical_margin"
        android:maxWidth="@dimen/activity_horizontal_margin"
        android:scaleType="center" />
    </TableRow>
</TableLayout>